Try to fix weird scrolling on mobile devices

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,10 @@ strong {
   font-weight: 700;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   overflow: hidden;
